tests/machine/x/pl/typed_var.pl
% Generated by Mochi compiler v0.10.26 on 2025-07-16T17:40:38Z
:- style_check(-singleton).
:- initialization(main, main).
main :-
    nb_setval(x, _),
    nb_getval(x, _V0),
    _V1 is _V0,
    writeln(_V1),
    true.
